test: define DB url setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 
+spring.datasource.url=jdbc:postgresql://127.0.0.1/requestsystem
+spring.datasource.username=postgres
+spring.datasource.password=test00
