--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.yaml</groupId>
+    		<artifactId>snakeyaml</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
