--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,8 @@
 databaseChangeLog:
-- includeAll:
-       path: changelog-1.x/
+       - preConditions:
+                - onFail: HALT
+                - onError: HALT
+       - includeAll:
+                path: changelog-1.x
+                relativeToChangelogFile: true
+              
