--- a/src/main/resources/db/changelog/changelog-1.x/changelog-1.0.yaml
+++ b/src/main/resources/db/changelog/changelog-1.x/changelog-1.0.yaml
@@ -7,12 +7,16 @@ databaseChangeLog:
             catalogName: user
             schemaName: public
             tableName: user
-            remarks: Creates  User table
+            remarks: Creates User table
             columns:
               - column:
                   name: id
                   type: BIGINT
                   autoIncrement: true
+                  constraints:
+                    primaryKey: true
               - column:
                   name: name
                   type: VARCHAR(255)
+                  constraints:
+                    nullable: false
